argocd/backstage/clusters/shashank-b1/apps/client-app/app/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test2
  labels:
    backstage.io/kubernetes-id: client-app
    istio.io/dataplane-mode: ambient
---
apiVersion: v1
kind: Service
metadata:
  name: client-app
  namespace: test2
  labels:
    app: client-app
    backstage.io/kubernetes-id: client-app
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: client-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-app
  namespace: test2
  labels:
    backstage.io/kubernetes-id: client-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
        backstage.io/kubernetes-id: client-app
    spec:
      serviceAccountName: client-app
      containers:
      - image: docker.io/kcbabo/keith-react-app:latest
        imagePullPolicy: Always
        name: client-app
        ports:
        - containerPort: 80
